more spacing bugs

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ nav .nav-item {
 .top-banner article {
 	flex-wrap: wrap;
 	margin-top: 3%;
+	margin-bottom: 5%;
 	padding: 0 5%;
 }
 .top-banner h2 {
